<resources>
    <string name="app_name">VacationApp</string>
    <string name="profile_configuration">Profile Configuration</string>

    <string name="applicationlogo">ApplicationLogo</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password">Password</string>
    <string name="fullName">Full Name</string>


    <string name="sign_up">Register</string>
    <string name="login">LogIn</string>
    <string name="logout">logout</string>
    <string name="back">Back</string>

    <string name="add_destination">Add Destination</string>
    <string name="edit_destination">Edit Destination</string>
    <string name="manage_flights">Flights</string>
    <string name="manage_hotels">Hotels</string>


    <string name="imageDest">Select image</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="topActivities">Top Activities</string>


    <string name="profile">Profile</string>
    <string name="offer">View Offer</string>
    <string name="spot">Find my best spot</string>

    <string name="period">Select the date</string>
    <string name="weather">Weather</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="budget">Budget</string>
    <string name="flightPrice">Flight Price</string>
    <string name="favActivities">Favourite Activities</string>
    <string name="saveFormButton">Save</string>
    <string name="backToMain">Back</string>



    <array name="initial_slider_values">
        <item>2000</item>
        <item>3500</item>
    </array>


    <string-array name="array_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="blank"> </string>

</resources>