<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".DatePicker">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp">

        <!--Image form -->
        <ImageView
            android:id="@+id/imageForm"
            android:layout_width="wrap_content"
            android:layout_height="121dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/form"/>
        <!--//Image form -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Period of time -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/period" />

                <Button
                    android:id="@+id/buttonDatePicker"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Date picker"/>

            </TableRow>
            <!--//Period of time -->

            <!--Show selected date -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/selectedDate"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selected date"/>

            </TableRow>
            <!--//Show selected date -->

            <!--Weather -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/radioGroupWeather"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonGenderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/hot"
                                android:layout_marginRight="5dp"/>

                            <RadioButton
                                android:id="@+id/radioButtonGenderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:text="@string/cold" />


                        </RadioGroup>

                    </TableRow>

                </TableLayout>

            </TableRow>
            <!--//Weather -->

        </TableLayout>

    </LinearLayout>

</ScrollView>