<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDestination">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Country -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/country" />

                <EditText
                    android:id="@+id/editTextCountry"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </TableRow>
            <!--//Country -->

            <!--City -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/city" />

                <EditText
                    android:id="@+id/editTextCity"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </TableRow>
            <!--//City -->

            <!--Select image -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/imageDest" />

                <Button
                    android:id="@+id/buttonChooseImage"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Choose Image"/>

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/buttonChooseImage"
                    android:layout_above="@id/editTextDescription" />

            </TableRow>
            <!--//Select image -->

            <!--Description -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </TableRow>
            <!--//Description -->

            <!--Top activities -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewTopActivities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/topActivities" />

            </TableRow>
            <!--//Top activities -->

            <!--1 -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewActivity1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="1" />

                <EditText
                    android:id="@+id/editTextActivity1"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <!--//1 -->

            <!--2 -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewActivity2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="2" />

                <EditText
                    android:id="@+id/editTextActivity2"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <!--//2 -->

            <!--3 -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewActivity3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="3" />

                <EditText
                    android:id="@+id/editTextActivity3"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <!--//3 -->

            <!--4 -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewActivity4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="4" />

                <EditText
                    android:id="@+id/editTextActivity4"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <!--//4 -->

            <!--5 -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewActivity5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="5" />

                <EditText
                    android:id="@+id/editTextActivity5"
                    android:layout_marginStart="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <!--//5 -->

            <!--Weather -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/radioGroupWeather"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonGenderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/hot"
                                android:layout_marginRight="5dp"/>

                            <RadioButton
                                android:id="@+id/radioButtonGenderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:text="@string/cold" />

                        </RadioGroup>

                    </TableRow>

                </TableLayout>

            </TableRow>
            <!--//Weather -->

        </TableLayout>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_marginStart="110dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Destination"/>

        <Button
            android:id="@+id/backToAdminPage"
            android:layout_marginStart="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"/>

    </LinearLayout>



</ScrollView>